projects/compiler/test/typechecker/binary/coalesce_eq_error.1.out
Error at %FILE_NAME%:2:7
Type mismatch
  |  a ?:= 15
           ^
Expected: Bool
but instead found: Int
