projects/compiler/test/typechecker/binary/coalesce_eq_error.1.abra
var a: Bool? = true
a ?:= 15